--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Griffon Metadata file
-#Mon Jun 21 12:06:33 CEST 2010
-app.griffon.version=0.9
+#Tue Feb 22 20:36:14 CET 2011
+app.griffon.version=0.9.2
 app.name=lookandfeel-easynth
-plugins.lookandfeel=0.1
-plugins.miglayout=0.1
+plugins.lookandfeel=0.4
+plugins.miglayout=0.2
