--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Griffon Metadata file
 #Tue Feb 22 20:36:14 CET 2011
-app.griffon.version=0.9.2
+app.griffon.version=0.9.3-beta-2
 app.name=lookandfeel-easynth
-plugins.lookandfeel=0.4
+plugins.lookandfeel=0.5
 plugins.miglayout=0.2
